wp_derive_request_builder/tests/fail/multiple_sparse_field_attr.rs
#[derive(wp_derive_request_builder::WpDerivedRequest)]
#[SparseField(crate::SparseUserField)]
#[SparseField(crate::SparsePluginField)]
enum UsersRequest {
    #[contextual_get(url = "/users", params = &UserListParams, output = Vec<SparseUser>)]
    List,
}

fn main() {}
